styles/globals.scss
html,
body {
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.modal-overlay {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1000;
	width: 100%;
	height: 100%;
	background-color: #000;
  opacity: 1;
}
.modal-wrapper {
	position: fixed;
	z-index: 1050;
	width: 100%;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
	outline: 0;
}
.modal {
	z-index: 100;
	background: white;
	position: relative;
	margin: 1.75rem auto;
	border-radius: 3px;
	padding: 2rem;
  top:25%;
  max-width: 600px;
}
.modal-header {
	display: flex;
	justify-content: flex-end;
}

.trade-tab{
	background-color:#fafafa;
	border:  thin solid #E0E0E0;
	border-radius: 10px;
	padding:5px;

	.Mui-selected{
		background-color: #FFE2D9 !important;
		border-radius: 10px !important;
		border-bottom: none !important;
		color: #F34F1D !important;
	}
	
	.MuiTabs-indicator{
		display: none !important;
	}
}
.tab-label{
	font-weight: 600!important;
	font-size: 1rem!important;
}

